# Apal-project-bvh

./: .gitignore  CMakeLists.txt  Makefile  Transform.cpp  Transform.h  bbox.cpp  bbox.h  main.cpp  makecornell.py  makescene.py  matvec.cpp  matvec.h  notepad.txt  objects.cpp  objects.h  raytracer.cpp  raytracer.h  raytracing  readfile.cpp  readfile.h  variables.h
output/: dragon.ppm  dragon_lbvh_box_depth.ppm  dragon_lbvh_count.ppm  out.ppm  random.ppm  random_lbvh_box_depth.ppm  random_lbvh_count.ppm
scripts/: dragontest.sh  test_cornell.sh  test_leaf.sh  tester.sh
stats/: dragon_runtime.txt  random_runtime.txt
tests/: cornellbox.test  random.test  random10.test  random100.test  random1000.test  random10000.test  randomCornell.test  randomCornell10.test  randomCornell100.test  randomCornell1000.test  simple_polys.test
